size change intro1 & redone import map

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <body>
     <script type="importmap">
-        <!-- {
+        {
             "imports": {
                 "three": "https://threejs.org/build/three.module.js"
             }
-        } -->
+        }
     </script>   
     <script type = "module" src="main.js"></script>
     <div id="menu-icon">
@@ -41,7 +41,7 @@
 
 
     <div id="introText">
-        <h1 class="wlcmH1">Welcome to our solar system.</h1>
+        <h1 class="wlcmH1">Welcome to our galaxy archive.</h1>
         <br>
         <p class="p1">Please select a planet.</p>
     </div>
