Added new function (not finished)

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
         <span></span>
     </div>
 
+    
+<!-- Rounded switch -->
+    <label class="switch">
+        <input type="checkbox" id="viewToggle">
+        <span class="slider round"></span>
+    </label>
+
     <!-- The planet navigation menu -->
     <div id="planet-menu">
         <ul id="planet-list">   
