--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         </div>
         
         <div id="overlay-body">
+            <!--Class also applied in JavaScript (for variations)-->
             <div id="planet-description" class="planetInformation"></div>
         </div>
         <div id="overlay-links">
